Use getFirst, getLast where appropriate
(cherry picked from commit 48f58842f2d79ed3387431ba702d7c1d640698af)